<resources>
    <string name="app_name">searchview demo</string>
    <string name="scrolling_demo">Scrolling Demo</string>

    <string name="large_text">
        Contrary to popular belief, Lorem Ipsum is not simply random text.
        It has roots in a piece of classical Latin literature from 45 BC,
        making it over 2000 years old. Richard McClintock, a Latin professor
        at Hampden-Sydney College in Virginia, looked up one of the more obscure
        Latin words, consectetur, from a Lorem Ipsum passage, and going through
        the cites of the word in classical literature, discovered the undoubtable
        source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus
        Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in
        45 BC. This book is a treatise on the theory of ethics, very popular during
        the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
        comes from a line in section 1.10.32.  Contrary to popular belief,
        Lorem Ipsum is not simply random text. It has roots in a piece of classical
        Latin literature from 45 BC,
        making it over 2000 years old. Richard McClintock, a Latin professor
        at Hampden-Sydney College in Virginia, looked up one of the more obscure
        Latin words, consectetur, from a Lorem Ipsum passage, and going through
        the cites of the word in classical literature, discovered the undoubtable
        source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus
        Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in
        45 BC. This book is a treatise on the theory of ethics, very popular during
        the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
        comes from a line in section 1.10.32
        making it over 2000 years old. Richard McClintock, a Latin professor
        at Hampden-Sydney College in Virginia, looked up one of the more obscure
        Latin words, consectetur, from a Lorem Ipsum passage, and going through
        the cites of the word in classical literature, discovered the undoubtable
        source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus
        Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in
        45 BC. This book is a treatise on the theory of ethics, very popular during
        the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",

    </string>
    <string name="ImageText">No Image Found</string>
    <string name="click">click</string>
    <string name="linear_rv">Linear RV</string>
    <string name="grid_rv">Grid RV</string>
    <string name="staggered_grid">Staggered Grid</string>
    <string name="spannable_grid">Spannable Grid</string>

    <string name="text_to_speech_demo">Text to Speech Demo</string>
    <string name="entered_text_is_speakable">Entered text is Speakable</string>
    <string name="speak">Speak</string>
    <string name="press_here_to_login">Press Here to Login</string>

    <string-array name="city">
        <item>Select City</item>
        <item>Ahmedabad</item>
        <item>Vadodara</item>
        <item>Surat</item>
        <item>Rajkot</item>
        <item>Bhavnagar</item>
    </string-array>

</resources>