<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RecyclerDemoActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btn_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="4">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:rippleColor="@color/purple_700"
            android:text="@string/linear_rv"
            android:id="@+id/linear_rv"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="12sp"
            android:layout_margin="2dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:rippleColor="@color/purple_700"
            android:text="@string/grid_rv"
            android:id="@+id/grid_rv"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="12sp"
            android:layout_margin="2dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:rippleColor="@color/purple_700"
            android:text="@string/staggered_grid"
            android:id="@+id/staggered_grid"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="12sp"
            android:layout_margin="2dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:rippleColor="@color/purple_700"
            android:text="@string/spannable_grid"
            android:id="@+id/spannable_grid"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="12sp"
            android:layout_margin="2dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_linear"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rv"
        tools:listitem="@layout/custom_rv"/>


</androidx.constraintlayout.widget.ConstraintLayout>